--- a/seision4/bt9ss4.html
+++ b/seision4/bt9ss4.html
@@ -99,9 +99,9 @@
     <form action="#">
         <fieldset>
         <legend>Is your cat an indoor or outdoor cat?</legend>
-        <input type="radio" id="Indoor"/>
+        <input type="radio" id="Indoor" name="cat-live"/>
         <label for="Indoor">Indoor</label>
-        <input type="radio" id="Outdoor"/>
+        <input type="radio" id="Outdoor" name="cat-live"/>
         <label for="Outdoor">Outdoor</label>
         
         </fieldset>
