--- a/seision4/bt10ss4.html
+++ b/seision4/bt10ss4.html
@@ -18,19 +18,19 @@
     <ul>
       <li>
         <a
-          href="https://www.google.com/search?q=about&rlz=1C1CHZN_viVN1098VN1098&oq=about&gs_lcrp=EgZjaHJvbWUyBggAEEUYOTINCAEQLhjHARjRAxiABDIHCAIQABiABDIHCAMQABiABDIGCAQQBRhAMgYIBRAFGEAyBggGEAUYQDIGCAcQBRhA0gEINjMzOWowajeoAgiwAgHxBRH7o-nLmlL28QUR-6Ppy5pS9g&sourceid=chrome&ie=UTF-8"
+          href="#About"
           >About</a
         >
       </li>
       <li>
         <a
-          href="https://www.google.com/search?q=Projects&rlz=1C1CHZN_viVN1098VN1098&oq=Projects&gs_lcrp=EgZjaHJvbWUyBggAEEUYOTIJCAEQABgKGIAEMgcIAhAAGIAEMgkIAxAAGAoYgAQyBwgEEAAYgAQyBwgFEAAYgAQyCQgGEC4YChiABDIGCAcQRRg80gEHMjg5ajBqOagCALACAQ&sourceid=chrome&ie=UTF-8"
+          href="#Projects"
           >Projects</a
         >
       </li>
       <li>
         <a
-          href="https://www.google.com/search?q=Contact&rlz=1C1CHZN_viVN1098VN1098&oq=Contact&gs_lcrp=EgZjaHJvbWUyBggAEEUYOTINCAEQABiDARixAxiABDIHCAIQABiABDIMCAMQABhDGIAEGIoFMgcIBBAAGIAEMgcIBRAAGIAEMgcIBhAAGIAEMgcIBxAAGIAEMgcICBAAGIAEMgcICRAAGI8C0gEHMTcwajBqOagCALACAQ&sourceid=chrome&ie=UTF-8"
+          href="#Contact"
           >Contact</a
         >
       </li>
@@ -59,7 +59,7 @@
           <td>A simple personal portfolio website.</td>
           <td>
             <a
-              href="EgZjaHJvbWUyBggAEEUYOTINCAEQABiDARixAxiABDINCAIQABiDARixAxiABDIGCAMQRRg8MgYIBBBFGDwyBggFEEUYPDIGCAYQRRg8MgYIBxBFGDzSAQgxNTEwajBqN6gCCLACAfEF93Jl4_9IbM0"
+              href="#View"
               >View</a
             >
           </td>
@@ -69,7 +69,7 @@
           <td>A web-based to-do list application.</td>
           <td>
             <a
-              href="EgZjaHJvbWUyBggAEEUYOTINCAEQABiDARixAxiABDINCAIQABiDARixAxiABDIGCAMQRRg8MgYIBBBFGDwyBggFEEUYPDIGCAYQRRg8MgYIBxBFGDzSAQgxNTEwajBqN6gCCLACAfEF93Jl4_9IbM0"
+              href="#View"
               >View</a
             >
           </td>
