--- a/seision4/bt9ss4.html
+++ b/seision4/bt9ss4.html
@@ -121,7 +121,7 @@
             <input type="url" placeholder="cat photo URL">
             <button>Submit</button>
             <br>
-            <p>No Coppyright - <a href="https://rikkei.edu.vn/">rikkei.edu.vn</a></p>
+            <p>No Coppyright - <a href="#rikkei.edu.vn/">rikkei.edu.vn</a></p>
         </form>
     
 </body>
