--- a/seision5/bt6ss5.html
+++ b/seision5/bt6ss5.html
@@ -19,6 +19,7 @@
         #b{
             background-color: white;
             border-left: 10px solid rgb(71, 210, 71) ;
+            padding-left: 10px;
             
         }
     </style>
@@ -38,9 +39,9 @@
             <span>
                 <span>.center {</span>
                     <br>
-                <span> text-align: center;</span>  
+                <span>&nbsp;&nbsp;&nbsp;&nbsp;    text-align: center;</span>  
                     <br>
-                <span>border: 3px solid green;</span>
+                <span> &nbsp;&nbsp;&nbsp;&nbsp; border: 3px solid green;</span>
                     <br>
                 <span>}</span>
                     <br>
