--- a/seision5/bt6ss5.html
+++ b/seision5/bt6ss5.html
@@ -37,11 +37,11 @@
             <h3>Example</h3>
         <div id="b">
             <span>
-                <span>.center {</span>
+                <span style="color: red;">.center {</span>
                     <br>
-                <span>&nbsp;&nbsp;&nbsp;&nbsp;    text-align: center;</span>  
+                <span style="color: red;">&nbsp;&nbsp;&nbsp;&nbsp;text-align <span style="color: black;">:</span> <span style="color: blue;">center</span>;</span>  
                     <br>
-                <span> &nbsp;&nbsp;&nbsp;&nbsp; border: 3px solid green;</span>
+                <span style="color: red;"> &nbsp;&nbsp;&nbsp;&nbsp; border <span style="color: black;">:</span> <span style="color: blue;">3px solid green;</span></span>
                     <br>
                 <span>}</span>
                     <br>
