--- a/sesion8/bt4ss8.html
+++ b/sesion8/bt4ss8.html
@@ -1,58 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="https://kit.fontawesome.com/7b988689d5.js" crossorigin="anonymous"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://kit.fontawesome.com/7b988689d5.js"crossorigin="anonymous"></script>
+    
     <style>
-        .img {
+      h3 {
+        border-bottom: 2px solid #ff0000;
+        color: #3d3b3be8;
+        width: 100px;
+        padding: 5px;
+      }
+      h4 {
+        color: #3d3b3bc5;
+      }
+      p {
+        color: #3d3b3be8;
+        opacity: 0.7;
+      }
+      .icon {
         position: relative;
         width: 60px;
         height: 60px;
         display: flex;
         align-items: center;
         justify-content: center;
-        margin-left: 20px;
-    }
+        margin: 20px;
+      }
 
-    .border {
+      .border {
         position: absolute;
-        width: 140%;
-        height: 140%;
+        width: 125%;
+        height: 125%;
         border: 1px solid rgba(0, 0, 0, 0.5);
         transform: rotate(45deg);
-    }
+      }
 
-    .content {
+      .gem {
         position: relative;
         background: white;
         padding: 10px;
         z-index: 1;
-        font-size: 32px;
+        font-size: 20px;
         color: rgba(217, 35, 35, 0.532);
-    }
-    .bai1{
+      }
+      .boss {
         display: flex;
-    }
+        align-items: center;
+        padding-left: 30px;
+      }
+      .content {
+        margin-left: 40px;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
+    <h3>Erat lacinia</h3>
     <table>
-        <tr>
-            <td>
-                <div class="bai1">
-                    <div class="img">
-                        <div class="border"></div><i class="fa-regular fa-gem"></i>
-        
-                    </div>
-                    <div class="text">
-                        <h3>Porttitor ullamcorper</h3>
-                        <span>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</span>
-                    </div>
-                </div>
-            </td>
-        </tr>
+      <tr>
+        <td>
+          <div class="boss">
+            <div class="icon">
+              <div class="border"></div>
+              <div class="gem">
+                <i class="fa-regular fa-gem"></i>
+              </div>
+            </div>
+            <div class="content">
+              <h4>Portitor ullamcorper</h4>
+              <p>
+                Aenean ornare velit lacus, ac varius enim <br />lorem
+                ullamcorper dolore. Proin aliquam <br />facilisis ante interdum.
+                Sed nulla amet <br />lorem feugiat tempus aliquam.
+              </p>
+            </div>
+          </div>
+        </td>
+        <td>
+          <div class="boss">
+            <div class="icon">
+              <div class="border"></div>
+              <div class="gem">
+                <i class="fa-solid fa-paper-plane"></i>
+              </div>
+            </div>
+            <div class="content">
+              <h4>Portitor ullamcorper</h4>
+              <p>
+                Aenean ornare velit lacus, ac varius enim <br />lorem
+                ullamcorper dolore. Proin aliquam <br />facilisis ante interdum.
+                Sed nulla amet <br />lorem feugiat tempus aliquam.
+              </p>
+            </div>
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <div class="boss">
+            <div class="icon">
+              <div class="border"></div>
+              <div class="gem">
+                <i class="fa-solid fa-rocket"></i>
+              </div>
+            </div>
+            <div class="content">
+              <h4>Portitor ullamcorper</h4>
+              <p>
+                Aenean ornare velit lacus, ac varius enim <br />lorem
+                ullamcorper dolore. Proin aliquam <br />facilisis ante interdum.
+                Sed nulla amet <br />lorem feugiat tempus aliquam.
+              </p>
+            </div>
+          </div>
+        </td>
+        <td>
+          <div class="boss">
+            <div class="icon">
+              <div class="border"></div>
+              <div class="gem">
+                <i class="fa-solid fa-signal"></i>
+              </div>
+            </div>
+            <div class="content">
+              <h4>Portitor ullamcorper</h4>
+              <p>
+                Aenean ornare velit lacus, ac varius enim <br />lorem
+                ullamcorper dolore. Proin aliquam <br />facilisis ante interdum.
+                Sed nulla amet <br />lorem feugiat tempus aliquam.
+              </p>
+            </div>
+          </div>
+        </td>
+      </tr>
     </table>
-</body>
+  </body>
 </html>
