--- a/sesion8/bt4ss8.html
+++ b/sesion8/bt4ss8.html
@@ -19,7 +19,7 @@
         color: #3d3b3be8;
         opacity: 0.7;
       }
-      .icon {
+      .hight {
         position: relative;
         width: 60px;
         height: 60px;
@@ -37,7 +37,7 @@
         transform: rotate(45deg);
       }
 
-      .gem {
+      .dimond {
         position: relative;
         background: white;
         padding: 10px;
@@ -45,7 +45,7 @@
         font-size: 20px;
         color: rgba(217, 35, 35, 0.532);
       }
-      .boss {
+      .all {
         display: flex;
         align-items: center;
         padding-left: 30px;
@@ -60,10 +60,10 @@
     <table>
       <tr>
         <td>
-          <div class="boss">
-            <div class="icon">
+          <div class="all">
+            <div class="hight">
               <div class="border"></div>
-              <div class="gem">
+              <div class="dimond">
                 <i class="fa-regular fa-gem"></i>
               </div>
             </div>
@@ -78,10 +78,10 @@
           </div>
         </td>
         <td>
-          <div class="boss">
-            <div class="icon">
+          <div class="all">
+            <div class="hight">
               <div class="border"></div>
-              <div class="gem">
+              <div class="dimond">
                 <i class="fa-solid fa-paper-plane"></i>
               </div>
             </div>
@@ -98,10 +98,10 @@
       </tr>
       <tr>
         <td>
-          <div class="boss">
-            <div class="icon">
+          <div class="all">
+            <div class="hight">
               <div class="border"></div>
-              <div class="gem">
+              <div class="dimond">
                 <i class="fa-solid fa-rocket"></i>
               </div>
             </div>
@@ -116,10 +116,10 @@
           </div>
         </td>
         <td>
-          <div class="boss">
-            <div class="icon">
+          <div class="all">
+            <div class="hight">
               <div class="border"></div>
-              <div class="gem">
+              <div class="dimond">
                 <i class="fa-solid fa-signal"></i>
               </div>
             </div>
