--- a/seision11/bt3/index.html
+++ b/seision11/bt3/index.html
@@ -18,15 +18,15 @@
     border-radius: 10px;
     
 }
-.mid1, .mid2{
+.body1, .body2{
     display: grid;
     gap:10px;
     grid-column: 1 / 5;
 }
-.mid1{
+.body1{
     grid-template-columns: 1fr 1fr 1fr 1fr;
 }
-.mid2{
+.body2{
     grid-template-columns: 1fr 1fr;
 }
 .item{
